// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Portfolio Screen should render snapshot 1`] = `
<StateAwareComponent
  loading={true}
  renderComponent={
    <React.Fragment>
      <AnimatedProfileHeader
        title="portfolio"
      >
        <React.Fragment>
          <AssetMetricsList
            containerStyle={
              Object {
                "marginVertical": 12,
              }
            }
            data={Array []}
            onPlusIconClicked={[Function]}
            showPlusIcon={true}
            title={0}
          />
          <BottomSheetListView
            data={Array []}
            isBottomSheetVisible={false}
            listHeight={500}
            listTitle="propertySearch:filters"
            onCloseDropDown={[Function]}
            onSelectItem={[Function]}
            selectedValue="ALL"
          />
        </React.Fragment>
      </AnimatedProfileHeader>
      <Loader
        visible={false}
      />
    </React.Fragment>
  }
  testID="stateAware"
/>
`;

exports[`Portfolio Screen should render snapshot for isFullScreenView 1`] = `
<StateAwareComponent
  loading={true}
  renderComponent={
    <React.Fragment>
      <AnimatedProfileHeader
        title="portfolio"
      >
        <React.Fragment>
          <AssetMetricsList
            containerStyle={
              Object {
                "marginVertical": 12,
              }
            }
            data={Array []}
            onPlusIconClicked={[Function]}
            showPlusIcon={true}
            title={0}
          />
          <BottomSheetListView
            data={Array []}
            isBottomSheetVisible={false}
            listHeight={500}
            listTitle="propertySearch:filters"
            onCloseDropDown={[Function]}
            onSelectItem={[Function]}
            selectedValue="ALL"
          />
        </React.Fragment>
      </AnimatedProfileHeader>
      <FullScreenAssetDetailsCarousel
        activeSlide={1}
        data={Array []}
        onFullScreenToggle={[Function]}
        updateSlide={[Function]}
      />
      <Loader
        visible={false}
      />
    </React.Fragment>
  }
  testID="stateAware"
/>
`;

exports[`Portfolio Screen should render snapshot for properties 1`] = `
<StateAwareComponent
  loading={true}
  renderComponent={
    <React.Fragment>
      <AnimatedProfileHeader
        title="portfolio"
      >
        <React.Fragment>
          <AssetMetricsList
            containerStyle={
              Object {
                "marginVertical": 12,
              }
            }
            data={Array []}
            onPlusIconClicked={[Function]}
            showPlusIcon={true}
            title={0}
          />
          <React.Fragment>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#001B36",
                    "marginBottom": 16,
                    "marginTop": 4,
                  }
                }
                textType="semiBold"
                type="small"
              >
                propertyPortfolio
              </Text>
              <Icon
                allowFontScaling={false}
                color="#4C5F72"
                name="vertical-dots"
                onPress={[Function]}
                size={18}
                testID="menu"
              />
            </View>
            <FlatList
              data={
                Array [
                  Object {
                    "address": "Sindhi Society, Chembur, Mumbai- 400071",
                    "color": "#CE9B6C",
                    "contacts": Object {
                      "country_code": "+91",
                      "email": "anuvrat.somnath@nineleaps.com",
                      "full_name": "Anuvrat Somnath",
                      "id": 1,
                      "phone_number": "7903470293",
                    },
                    "id": 1,
                    "images": Array [
                      Object {
                        "file_name": "House-1b",
                        "is_cover_image": false,
                        "link": Object {
                          "testUri": "../../../packages/common/src/assets/images/property.png",
                        },
                      },
                    ],
                    "isPropertyCompleted": true,
                    "property_name": "2BHK - Godrej Prime",
                    "type": "OWNER",
                  },
                  Object {
                    "address": "Sindhi Society, Chembur, Mumbai- 400071",
                    "color": "#6CCEC1",
                    "contacts": Object {
                      "country_code": "+91",
                      "email": "anuvrat.somnath@nineleaps.com",
                      "full_name": "Anuvrat Somnath",
                      "id": 1,
                      "phone_number": "7903470293",
                    },
                    "id": 2,
                    "images": Array [
                      Object {
                        "file_name": "House-1b",
                        "is_cover_image": false,
                        "link": Object {
                          "testUri": "../../../packages/common/src/assets/images/property.png",
                        },
                      },
                    ],
                    "isPropertyCompleted": true,
                    "property_name": "2BHK - Godrej Prime",
                    "type": "RENTED",
                  },
                  Object {
                    "address": "Sindhi Society, Chembur, Mumbai- 400071",
                    "color": "#FF8576",
                    "contacts": Object {
                      "country_code": "+91",
                      "email": "anuvrat.somnath@nineleaps.com",
                      "full_name": "Anuvrat Somnath",
                      "id": 1,
                      "phone_number": "7903470293",
                    },
                    "id": 3,
                    "images": Array [
                      Object {
                        "file_name": "House-1b",
                        "is_cover_image": false,
                        "link": Object {
                          "testUri": "../../../packages/common/src/assets/images/property.png",
                        },
                      },
                    ],
                    "isPropertyCompleted": true,
                    "property_name": "2BHK - Godrej Prime",
                    "type": "VACANT",
                  },
                  Object {
                    "address": "Sindhi Society, Chembur, Mumbai- 400071",
                    "color": "#FF8576",
                    "id": 4,
                    "images": Array [
                      Object {
                        "file_name": "House-1b",
                        "is_cover_image": false,
                        "link": Object {
                          "testUri": "../../../packages/common/src/assets/images/property.png",
                        },
                      },
                    ],
                    "isPropertyCompleted": false,
                    "property_name": "2BHK - Godrej Prime",
                    "type": "VACANT",
                  },
                  Object {
                    "address": "Sindhi Society, Chembur, Mumbai- 400071",
                    "color": "#FBC02D",
                    "contacts": Object {
                      "country_code": "+91",
                      "email": "anuvrat.somnath@nineleaps.com",
                      "full_name": "Anuvrat Somnath",
                      "id": 1,
                      "phone_number": "7903470293",
                    },
                    "id": 5,
                    "images": Array [
                      Object {
                        "file_name": "House-1b",
                        "is_cover_image": false,
                        "link": Object {
                          "testUri": "../../../packages/common/src/assets/images/property.png",
                        },
                      },
                    ],
                    "isPropertyCompleted": true,
                    "property_name": "2BHK - Godrej Prime",
                    "type": "FOR SALE",
                  },
                  Object {
                    "address": "Sindhi Society, Chembur, Mumbai- 400071",
                    "color": "#58C2f1",
                    "contacts": Object {
                      "country_code": "+91",
                      "email": "anuvrat.somnath@nineleaps.com",
                      "full_name": "Anuvrat Somnath",
                      "id": 1,
                      "phone_number": "7903470293",
                    },
                    "id": 6,
                    "images": Array [
                      Object {
                        "file_name": "House-1b",
                        "is_cover_image": false,
                        "link": Object {
                          "testUri": "../../../packages/common/src/assets/images/property.png",
                        },
                      },
                    ],
                    "isPropertyCompleted": true,
                    "property_name": "2BHK - Godrej Prime",
                    "type": "MAINTAIN",
                  },
                ]
              }
              disableVirtualization={false}
              extraData={0}
              horizontal={false}
              initialNumToRender={10}
              keyExtractor={[Function]}
              maxToRenderPerBatch={10}
              numColumns={1}
              onEndReachedThreshold={2}
              removeClippedSubviews={false}
              renderItem={[Function]}
              scrollEventThrottle={50}
              updateCellsBatchingPeriod={50}
              windowSize={21}
            />
          </React.Fragment>
          <BottomSheetListView
            data={Array []}
            isBottomSheetVisible={false}
            listHeight={500}
            listTitle="propertySearch:filters"
            onCloseDropDown={[Function]}
            onSelectItem={[Function]}
            selectedValue="ALL"
          />
        </React.Fragment>
      </AnimatedProfileHeader>
      <Loader
        visible={true}
      />
    </React.Fragment>
  }
  testID="stateAware"
/>
`;

exports[`Portfolio Screen should render snapshot for tenancies 1`] = `
<StateAwareComponent
  loading={true}
  renderComponent={
    <React.Fragment>
      <AnimatedProfileHeader
        title="portfolio"
      >
        <React.Fragment>
          <AssetMetricsList
            containerStyle={
              Object {
                "marginVertical": 12,
              }
            }
            data={Array []}
            onPlusIconClicked={[Function]}
            showPlusIcon={true}
            title={0}
          />
          <BottomSheetListView
            data={Array []}
            isBottomSheetVisible={false}
            listHeight={500}
            listTitle="propertySearch:filters"
            onCloseDropDown={[Function]}
            onSelectItem={[Function]}
            selectedValue="ALL"
          />
        </React.Fragment>
      </AnimatedProfileHeader>
      <Loader
        visible={false}
      />
    </React.Fragment>
  }
  testID="stateAware"
/>
`;
